--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       </div>
       <div class="cards-container">
         <div class="cards card1">
-          <p class="task-title">Trip to Paris</p>
+          
+            <p class="task-title"><a href="./trip.html" style="color: inherit; text-decoration: none">Trip to Paris</p>
+          </a>
           <hr class="line" />
           <p class="task-body">&nbspCompleted Task</p>
           <form action="" class="check">
